--- a/www/wp-content/themes/yana/css/_globals.scss
+++ b/www/wp-content/themes/yana/css/_globals.scss
@@ -17,6 +17,9 @@ $sidebar-width: 306px;
 $sidebar-gutter: 54px;
 
 
+$tablet-sidebar-width: 252px;
+
+
 // used for calculating ems
 $base-font-size: 16px;
 
