--- a/www/wp-content/themes/yana/css/_header.scss
+++ b/www/wp-content/themes/yana/css/_header.scss
@@ -24,11 +24,17 @@ $logo-gutter: 30px;
     margin-left: ($sidebar-width + $sidebar-gutter) * -1;
   }
 
+
   @include breakpoint(tablet) {
+    .logo {
+      width: $tablet-sidebar-width;
+        margin-left: ($tablet-sidebar-width + $sidebar-gutter) * -1;
+    }
     .content, .secondary-content {
       max-width: none;
-      padding-left: $sidebar-width + $sidebar-gutter + $tablet-gutter-width;
+      padding-left: $tablet-sidebar-width + $sidebar-gutter + $tablet-gutter-width;
     }
+    font-size: 13px; // TODO: ugly!
   }
 
   @include breakpoint(mobile) {
@@ -76,18 +82,23 @@ $logo-gutter: 30px;
 .primary-nav {
   $nav-colors: $lightteal, $yellow, $green, $orange;
   position: relative;
-  z-index: 2;
+  z-index: 20;
   margin-top: em(48px);
+
+  ul {
+    text-align: justify;
+  }
+
+  ul:after{
+    content: "";
+    width: 100%;
+    display: inline-block;
+  }
 
   li {
     display: inline-block;
     position: relative;
-    margin-right: em(60px);
     padding: 0 0 em(24px);
-    &:last-child {
-      // TODO: IE compat
-      margin-right: 0;
-    }
   }
 
   a {
@@ -111,6 +122,7 @@ $logo-gutter: 30px;
 
   .sub-menu {
     display: block;
+    z-index: 20;
     height: 0;
     opacity: 0;
     position: absolute;
@@ -236,7 +248,7 @@ $logo-gutter: 30px;
   height: em(430px);
   padding-top: em(24px);
   padding-bottom: em(24px);
-  background-position: 50% 0;
+  background-position: 50% 50%;
   background-repeat: no-repeat;
   background-size: cover;
 
