--- a/www/wp-content/themes/yana/css/_globals.scss
+++ b/www/wp-content/themes/yana/css/_globals.scss
@@ -148,6 +148,7 @@ $base-font-size: 16px;
 }
 
 %image-replacement {
+  display: block;
   background-color: transparent;
   border: 0;
   overflow: hidden;
