--- a/www/wp-content/themes/yana/style.css
+++ b/www/wp-content/themes/yana/style.css
@@ -52,14 +52,14 @@ img { vertical-align: middle; }
 @media all and (max-width: 900px) { .site-header .content, .site-header .secondary-content, .masthead .content, .site-body .content, .home-circles .content, .home-intro .content, .site-footer .content { max-width: none; padding-left: 30px; padding-right: 30px; } }
 @media all and (max-width: 600px) { .site-header .content, .site-header .secondary-content, .masthead .content, .site-body .content, .home-circles .content, .home-intro .content, .site-footer .content { padding-left: 30px; padding-right: 30px; } }
 
-.enews .controls, .site-body .content, .sidebar-enews .controls, .home-circles .content, .event-toc-1 { *zoom: 1; }
-.enews .controls:before, .site-body .content:before, .sidebar-enews .controls:before, .home-circles .content:before, .event-toc-1:before, .enews .controls:after, .site-body .content:after, .sidebar-enews .controls:after, .home-circles .content:after, .event-toc-1:after { display: table; content: ""; }
-.enews .controls:after, .site-body .content:after, .sidebar-enews .controls:after, .home-circles .content:after, .event-toc-1:after { clear: both; }
+.enews .controls, .site-body .content, .sidebar-enews .controls, .home-circles .content, .event-toc-1, .site-footer .content { *zoom: 1; }
+.enews .controls:before, .site-body .content:before, .sidebar-enews .controls:before, .home-circles .content:before, .event-toc-1:before, .site-footer .content:before, .enews .controls:after, .site-body .content:after, .sidebar-enews .controls:after, .home-circles .content:after, .event-toc-1:after, .site-footer .content:after { display: table; content: ""; }
+.enews .controls:after, .site-body .content:after, .sidebar-enews .controls:after, .home-circles .content:after, .event-toc-1:after, .site-footer .content:after { clear: both; }
 
 .skip-link, .icon-badge .label { clip: rect(0 0 0 0); width: 1px; height: 1px; margin: -1px; padding: 0; border: 0; overflow: hidden; position: absolute; }
 
-.site-header .logo a { background-color: transparent; border: 0; overflow: hidden; }
-.site-header .logo a:before { content: ""; display: block; width: 0; height: 150%; }
+.site-header .logo a, .site-footer .footer-about .logo { display: block; background-color: transparent; border: 0; overflow: hidden; }
+.site-header .logo a:before, .site-footer .footer-about .logo:before { content: ""; display: block; width: 0; height: 150%; }
 
 @font-face { font-family: 'icomoon'; src: url("fonts/icomoon.eot"); src: url("fonts/icomoon.eot?#iefix") format("embedded-opentype"), url("fonts/icomoon.woff") format("woff"), url("fonts/icomoon.ttf") format("truetype"), url("fonts/icomoon.svg#icomoon") format("svg"); font-weight: normal; font-style: normal; }
 
@@ -343,13 +343,16 @@ blockquote + p { margin-top: 2.8em; }
 .event-toc-2 .entry-title { margin: 0 0 0.5em; font: normal 1.5em/1 "Neue Helvetica W01", sans-serif; font-weight: 400; }
 .event-toc-2 p { margin: 0.85714em 0 1.71429em; font-size: 0.875em; line-height: 1.42857; }
 
-.site-footer { background: #1B6F7A; }
+.site-footer { border-bottom: 5.25em solid #14535c; background: #1B6F7A; }
 .site-footer, .site-footer a { color: #7CBFC7; }
-.site-footer .content { position: relative; padding-top: 1.5em; padding-bottom: 2.25em; }
-.site-footer .footer-about { width: 39.8773%; }
-.site-footer .footer-about p, .site-footer .footer-about label { margin: 0 0 1.5em; font: normal 1em/1.875 "Neue Helvetica W01", sans-serif; font-weight: 400; }
+.site-footer .content { position: relative; padding-top: 2.25em; padding-bottom: 3.75em; }
+.site-footer .footer-about { float: left; width: 39.8773%; margin: 0 11.65644% 0 0; }
+.site-footer .footer-about .logo { width: 100%; height: 5.25em; margin: 0.375em 0 1.125em; min-height: 84px; background: transparent url("img/footer-logo.svg") 0 0 no-repeat; background-size: 144px 84px; }
+.no-svg .site-footer .footer-about .logo { background-image: url("img/footer-logo.png"); }
+.site-footer .footer-about p, .site-footer .footer-about label { margin: 0 0 1.125em; font: normal 1em/1.875 "Neue Helvetica W01", sans-serif; font-weight: 400; }
 .site-footer .footer-about a { font: 700 1em/100% "ITC American Typewriter W01", monospace; }
 .site-footer .footer-enews .controls { max-width: 306px; }
+.site-footer .footer-nav { float: left; width: 48.46626%; }
 
 .high-contrast body { color: #3d515a; }
 .high-contrast h1, .high-contrast h1 a, .high-contrast h2, .high-contrast h2 a, .high-contrast h3, .high-contrast h3 a, .high-contrast h4, .high-contrast h4 a, .high-contrast h5, .high-contrast h5 a, .high-contrast h6, .high-contrast h6 a { color: #31807b; }
@@ -369,6 +372,7 @@ blockquote + p { margin-top: 2.8em; }
 .debug .event-toc .entry, .debug .news-toc .entry { outline: 1px solid rgba(255, 0, 0, 0.35); background: rgba(255, 0, 0, 0.1); }
 .debug .page-sidebar { background: rgba(255, 0, 255, 0.1); outline: 1px solid rgba(0, 0, 255, 0.25); }
 .debug blockquote { outline: 1px solid rgba(0, 0, 0, 0.5); }
+.debug .footer-about, .debug .footer-nav, .debug .site-footer .logo { outline: 1px solid rgba(255, 0, 0, 0.5); }
 .debug img { opacity: 0.5; }
 
 @media print { * { background: transparent !important; color: #000 !important; /* Black prints faster: h5bp.com/s */ box-shadow: none !important; text-shadow: none !important; }
