--- a/www/wp-content/themes/yana/css/_globals.scss
+++ b/www/wp-content/themes/yana/css/_globals.scss
@@ -115,6 +115,14 @@ $base-font-size: 16px;
   *zoom: 1;
 }
 
+%inline-block {
+  display: inline-block;
+  .lt-ie8 & {
+    zoom: 1;
+    display: inline;
+  }
+}
+
 %visuallyhidden {
   clip: rect(0 0 0 0);
   width: 1px;
