--- a/www/wp-content/themes/yana/css/_widgets.scss
+++ b/www/wp-content/themes/yana/css/_widgets.scss
@@ -1,8 +1,52 @@
-.video {
-  position: relative;
-  padding-bottom: percentage(9/16); /* 16:9 */
-  height: 0;
+///////////////////////////
+// WordPress Media
+///////////////////////////
+.aligncenter, .alignnone {
+  width: 100%;
+}
 
+
+.alignleft, .alignright {
+  width: percentage(309/618);
+}
+
+.alignleft {
+  float: left;
+  margin: 0 percentage(30/618) em(30px) 0;
+}
+
+.alignright {
+  float: right;
+  margin: 0 0 em(30px) percentage(30/618);
+}
+
+.aligncenter, .alignnone, .alignleft, .alignright {
+  img {
+    display: block;
+    width: 100%;
+    max-width: 100%;
+    height: auto;
+    margin: 0 auto;
+  }
+}
+
+.wp-caption-text {
+  margin: em(12px,12px);
+  font-size: em(12px);
+  line-height: (18/12);
+}
+
+///////////////////////////
+// Embedded videos
+///////////////////////////
+.embed {
+  margin: em(30px) 0;
+  .inner {
+    width: 100%;
+    position: relative;
+    height: 0;
+    padding-bottom: 56.25%; // 56.25%; /* 16:9 */
+  }
   iframe {
     position: absolute;
     top: 0;
