--- a/www/wp-content/themes/yana/style.css
+++ b/www/wp-content/themes/yana/style.css
@@ -140,8 +140,21 @@ blockquote + p { margin-top: 2.8em; }
 @media all and (max-width: 600px) { .site-header { font-size: 13px; }
   .site-body { font-size: 13px; }
   h1 { font-size: 2.76923em; } }
-.video { position: relative; padding-bottom: 56.25%; /* 16:9 */ height: 0; }
-.video iframe { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
+.aligncenter, .alignnone { width: 100%; }
+
+.alignleft, .alignright { width: 50%; }
+
+.alignleft { float: left; margin: 0 4.85437% 1.875em 0; }
+
+.alignright { float: right; margin: 0 0 1.875em 4.85437%; }
+
+.aligncenter img, .alignnone img, .alignleft img, .alignright img { display: block; width: 100%; max-width: 100%; height: auto; margin: 0 auto; }
+
+.wp-caption-text { margin: 1em; font-size: 0.75em; line-height: 1.5; }
+
+.embed { margin: 1.875em 0; }
+.embed .inner { width: 100%; position: relative; height: 0; padding-bottom: 56.25%; }
+.embed iframe { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
 
 .enews label { display: block; }
 .enews .controls { width: 100%; }
