--- a/www/wp-content/themes/yana/style.css
+++ b/www/wp-content/themes/yana/style.css
@@ -242,11 +242,11 @@ blockquote + p { margin-top: 2.8em; }
 .secondary-nav li:last-child a { padding-right: 0; }
 .secondary-nav .current a { color: #2494a2; }
 
-.masthead { position: relative; height: 26.875em; padding-top: 1.5em; padding-bottom: 1.5em; background-position: 50% 50%; background-repeat: no-repeat; background-size: cover; }
+.masthead { position: relative; height: 25.5em; padding-top: 0.75em; padding-bottom: 0.75em; background-position: 50% 50%; background-repeat: no-repeat; background-size: cover; }
 .masthead .content { position: relative; padding-top: 0; padding-bottom: 0; }
-.masthead .vignette { display: block; position: absolute; z-index: 2; width: 100%; height: 29.875em; left: 0; top: 0; }
-.masthead .vignette .content { height: 29.875em; }
-.masthead .vignette img { float: right; display: block; width: auto; height: 29.875em; }
+.masthead .vignette { display: block; position: absolute; z-index: 2; width: 100%; height: 480px; left: 0; bottom: 0; }
+.masthead .vignette .content { height: 480px; }
+.masthead .vignette img { float: right; display: block; width: auto; height: 480px; }
 .masthead .masthead-title, .masthead p { color: #fff; }
 .masthead .masthead-title { margin: 0.2em; font: 700 3.75em/1.2 "ITC American Typewriter W01", monospace; text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2); }
 .masthead p { margin: 0.66667em; font: normal 1.125em/1.77778 "Neue Helvetica W01", sans-serif; font-weight: 400; color: rgba(255, 255, 255, 0.75); }
