--- a/www/wp-content/themes/yana/css/_header.scss
+++ b/www/wp-content/themes/yana/css/_header.scss
@@ -123,10 +123,9 @@ $vignette-height: 480px;
   }
 
   .sub-menu {
-    display: block;
+    display: none;
     z-index: 20;
     height: 0;
-    opacity: 0;
     position: absolute;
     width: em(192px);
     top: em(48px);
@@ -136,7 +135,6 @@ $vignette-height: 480px;
     border: 1px solid #E4E4E4;
     border-radius: 12px;
     background: #fff;
-    //transition: 200ms opacity ease-out 0;
 
     li {
       display: block;
@@ -188,7 +186,6 @@ $vignette-height: 480px;
     .sub-menu {
       display: block;
       height: auto;
-      opacity: 1;
     }
   }
 }
