Hide sidebar on mobile

--- a/www/wp-content/themes/yana/css/_body.scss
+++ b/www/wp-content/themes/yana/css/_body.scss
@@ -1,39 +1,35 @@
 .site-body {
   .content {
     @extend %inner-content-frame;
+    @extend %clearfix;
+    max-width: $max-content-width - $sidebar-width - $sidebar-gutter;
     padding-top: em(36px);
     padding-bottom: em(36px);
-    @extend %clearfix;
+    padding-left: $sidebar-width + $sidebar-gutter + $outer-gutter-width;
   }
 
-  &.has-sidebar {
-    .content {
-      max-width: $max-content-width - $sidebar-width - $sidebar-gutter;
-      padding-left: $sidebar-width + $sidebar-gutter + $outer-gutter-width;
-    }
+  .page-sidebar {
+    float: left;
+    width: $sidebar-width;
+    margin-left: ($sidebar-width + $sidebar-gutter) * -1;
+  }
 
+  @include breakpoint(tablet) {
     .page-sidebar {
-      float: left;
-      width: $sidebar-width;
-      margin-left: ($sidebar-width + $sidebar-gutter) * -1;
+      width: $tablet-sidebar-width;
+      margin-left: ($tablet-sidebar-width + $sidebar-gutter) * -1;
     }
-
-    @include breakpoint(tablet) {
-      .page-sidebar {
-        width: $tablet-sidebar-width;
-        margin-left: ($tablet-sidebar-width + $sidebar-gutter) * -1;
-      }
-      .content {
-        max-width: none;
-        padding-left: $tablet-sidebar-width + $sidebar-gutter + $tablet-gutter-width;
-      }
+    .content {
+      max-width: none;
+      padding-left: $tablet-sidebar-width + $sidebar-gutter + $tablet-gutter-width;
     }
+  }
 
-    @include breakpoint(mobile) {
-      .content {
-        max-width: none;
-        padding-left: $sidebar-width + $sidebar-gutter + $mobile-gutter-width;
-      }
+  @include breakpoint(mobile) {
+    .page-sidebar { display: none; }
+    .content {
+      max-width: none;
+      padding-left: $mobile-gutter-width;
     }
   }
 }
