Mobile nav experiments

--- a/www/wp-content/themes/yana/css/_header.scss
+++ b/www/wp-content/themes/yana/css/_header.scss
@@ -29,7 +29,7 @@ $vignette-height: 480px;
   @include breakpoint(tablet) {
     .logo {
       width: $tablet-sidebar-width;
-        margin-left: ($tablet-sidebar-width + $sidebar-gutter) * -1;
+      margin-left: ($tablet-sidebar-width + $sidebar-gutter) * -1;
     }
     .content, .secondary-content {
       max-width: none;
@@ -39,9 +39,21 @@ $vignette-height: 480px;
   }
 
   @include breakpoint(mobile) {
+    font-size: 12px;
+
+    .logo {
+      margin-left: 0;
+    }
+
+
     .content, .secondary-content {
       max-width: none;
-      padding-left: $sidebar-width + $sidebar-gutter + $mobile-gutter-width;
+      height: auto;
+      padding-left: $mobile-gutter-width;
+    }
+
+    .content {
+      padding: 16px $mobile-gutter-width;
     }
   }
 
@@ -316,5 +328,100 @@ $vignette-height: 480px;
   .text {
     display: table-cell;
     vertical-align: middle;
+  }
+}
+
+@include breakpoint(mobile) {
+
+  $mobile-nav-w: 216px;
+  $mobile-nav-padding: 12px;
+
+  .site-header {
+    .logo {
+      float: none;
+      width: (138px / 1.5);
+      height: (84px / 1.5);
+      a {
+        background-size: (138px / 1.5) (84px / 1.5);
+        background-position: 0 0;
+      }
+    }
+  }
+
+  .site-nav {
+    position: fixed;
+    overflow: scroll;
+    top: 0;
+    background: #eaeaea;
+
+    width: $mobile-nav-w;
+    padding: $mobile-nav-padding;
+    height: 100%;
+    z-index: 99999;
+    right: ($mobile-nav-w + ($mobile-nav-padding * 2)) * -1;
+    transition: 200ms right ease-out;
+  }
+
+  .primary-nav {
+    margin-top: 0;
+
+    ul {
+      text-align: left;
+    }
+
+    ul:after { display: none; }
+
+    li {
+      display: block;
+    }
+
+    a { display: inline-block; }
+
+    .sub-menu {
+      display: block;
+      position: relative;
+      width: auto;
+      height: auto;
+      left: 0;
+      top: 0;
+      margin: 0;
+      padding: 0;
+      border: 0;
+      background: transparent;
+
+      &:before, &:after { display: none; }
+
+      a { display: inline-block; }
+    }
+  }
+
+  .secondary-nav {
+    position: relative;
+    height: auto;
+    top: auto;
+
+    div, li {
+      display: block;
+    }
+
+    .secondary-content {
+      padding-left: 0;
+      text-align: left;
+    }
+
+    a {
+      display: inline-block;
+      padding: 0;
+    }
+
+    .badge {
+      display: none;
+    }
+  }
+
+  .show-nav {
+    .site-nav {
+      right: 0;
+    }
   }
 }
