--- a/www/wp-content/themes/yana/style.css
+++ b/www/wp-content/themes/yana/style.css
@@ -195,7 +195,10 @@ blockquote + p { margin-top: 2.8em; }
 @media all and (max-width: 900px) { .site-header { font-size: 13px; }
   .site-header .logo { width: 252px; margin-left: -306px; }
   .site-header .content, .site-header .secondary-content { max-width: none; padding-left: 336px; } }
-@media all and (max-width: 760px) { .site-header .content, .site-header .secondary-content { max-width: none; padding-left: 390px; } }
+@media all and (max-width: 760px) { .site-header { font-size: 12px; }
+  .site-header .logo { margin-left: 0; }
+  .site-header .content, .site-header .secondary-content { max-width: none; height: auto; padding-left: 30px; }
+  .site-header .content { padding: 16px 30px; } }
 .site-header .logo { display: block; float: left; position: relative; z-index: 2; height: 84px; }
 .site-header .logo a { display: block; width: 138px; height: 84px; background: transparent url("img/header-logo.svg") 50% 0 no-repeat; background-size: 138px 84px; }
 .no-svg .site-header .logo a { background-image: url("img/header-logo.png"); }
@@ -253,6 +256,23 @@ blockquote + p { margin-top: 2.8em; }
 .masthead .text-wrap { display: table; position: relative; z-index: 6; max-width: 31.5em; height: 23.875em; }
 .masthead .text { display: table-cell; vertical-align: middle; }
 
+@media all and (max-width: 760px) { .site-header .logo { float: none; width: 92px; height: 56px; }
+  .site-header .logo a { background-size: 92px 56px; background-position: 0 0; }
+  .site-nav { position: fixed; overflow: scroll; top: 0; background: #eaeaea; width: 216px; padding: 12px; height: 100%; z-index: 99999; right: -240px; transition: 200ms right ease-out; }
+  .primary-nav { margin-top: 0; }
+  .primary-nav ul { text-align: left; }
+  .primary-nav ul:after { display: none; }
+  .primary-nav li { display: block; }
+  .primary-nav a { display: inline-block; }
+  .primary-nav .sub-menu { display: block; position: relative; width: auto; height: auto; left: 0; top: 0; margin: 0; padding: 0; border: 0; background: transparent; }
+  .primary-nav .sub-menu:before, .primary-nav .sub-menu:after { display: none; }
+  .primary-nav .sub-menu a { display: inline-block; }
+  .secondary-nav { position: relative; height: auto; top: auto; }
+  .secondary-nav div, .secondary-nav li { display: block; }
+  .secondary-nav .secondary-content { padding-left: 0; text-align: left; }
+  .secondary-nav a { display: inline-block; padding: 0; }
+  .secondary-nav .badge { display: none; }
+  .show-nav .site-nav { right: 0; } }
 .site-body .content { max-width: 618px; padding-top: 2.25em; padding-bottom: 2.25em; padding-left: 444px; }
 .site-body .page-sidebar { float: left; width: 306px; margin-left: -360px; }
 @media all and (max-width: 900px) { .site-body .page-sidebar { width: 252px; margin-left: -306px; }
