--- a/www/wp-content/themes/yana/css/_homepage.scss
+++ b/www/wp-content/themes/yana/css/_homepage.scss
@@ -1,12 +1,3 @@
-.home {
-  .masthead {
-    .mask { display: none; }
-    .masthead-title {
-      @include mono-bold(em(84px), 1);
-    }
-  }
-}
-
 .home-circles {
   position: relative;
   z-index: 6;
@@ -69,10 +60,8 @@
 
   }
 
-  @media all and (max-width: 700px) {
-    .entry { height: em(216px); }
-    .inner { padding: em(18px); }
-    .title { font-size: em(20px) }
+  @include breakpoint(mobile) {
+    display: none;
   }
 }
 
