Move masthead styles to their own file

--- a/www/wp-content/themes/yana/css/site.scss
+++ b/www/wp-content/themes/yana/css/site.scss
@@ -12,6 +12,7 @@ Author URI: http://dialect.ca/
 @import "widgets";
 
 @import "header";
+@import "masthead";
 @import "body";
 @import "sidebar";
 @import "homepage";
