--- a/www/wp-content/themes/yana/style.css
+++ b/www/wp-content/themes/yana/style.css
@@ -277,7 +277,7 @@ blockquote + p { margin-top: 2.8em; }
 @media all and (max-width: 760px) { .masthead { height: auto; }
   .masthead .content { height: auto; font-size: 12px; }
   .masthead .masthead-title { font-size: 3em; }
-  .home .masthead .masthead-title { font-size: 4.125em; }
+  .home .masthead .masthead-title { font-size: 3.75em; }
   .masthead .vignette { display: none; } }
 .site-body .content { max-width: 618px; padding-top: 2.25em; padding-bottom: 2.25em; padding-left: 444px; }
 .site-body .page-sidebar { float: left; width: 306px; margin-left: -360px; }
@@ -349,6 +349,7 @@ blockquote + p { margin-top: 2.8em; }
 .home-intro .title, .home-intro p { color: #bbcad2; }
 .home-intro .title { margin: 0.9em 0; font: normal 1.25em/2.4 "Neue Helvetica W01", sans-serif; font-weight: 700; letter-spacing: 2px; text-transform: uppercase; }
 .home-intro p { margin: 0.5625em 0; font: normal 2em/1.5 "Neue Helvetica W01", sans-serif; font-weight: 500; }
+@media all and (max-width: 760px) { .home-intro { font-size: 12px; } }
 
 .news-toc-home .entry { margin: 0 0 3em; }
 .news-toc-home .image { display: block; margin: 0 0 1.5em; }
